Beginning to implement dynamic elements

--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -1,5 +1,5 @@
 <header class="app-header navbar">
-  <ul class="nav navbar-nav mr-auto">
+  <ul class="nav navbar-nav">
     <li class="nav-item px-3">
       <h3>ImageCropper</h3>
     </li>
