--- a/src/app/screens/crop-image/crop-image.component.css
+++ b/src/app/screens/crop-image/crop-image.component.css
@@ -42,21 +42,16 @@
     border-style: solid;
     border-width: 1px;
     border-color: lightslategray;
-
+    overflow: hidden;
 }
 
-.image-canvas-img {
+.image-canvas img {
     max-width: 100%;
     max-height: 100%;
     position:absolute; /*it can be fixed too*/
     left:0; right:0;
     top:0; bottom:0;
     margin:auto;
-
-    /*this to solve "the content will not be cut when the window is smaller than the content": */
-    max-width:100%;
-    max-height:100%;
-    overflow:auto;
 }
 
 input[type='checkbox'].form-control {
@@ -64,9 +59,23 @@ input[type='checkbox'].form-control {
     width: 20px;
 }
 
+.foreground {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    margin-left: -1px;
+    margin-top: -1px;
+}
 
+.draggable {
+    width: 100px;
+    height: 100px;
+    z-index: 3;
+    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.4);
+}
 
-
-.cr-slider-wrap {
-    background: red !important;
+.ng-draggable {
+    cursor: move;
 }
