--- a/src/app/screens/crop-image/crop-image.component.html
+++ b/src/app/screens/crop-image/crop-image.component.html
@@ -25,12 +25,12 @@
                 <p class="remove-border num top-left">{{imageHeight}}px</p>
                 <p class="remove-border num bottom-left">0px</p>
               </div>
-              <div class="col-md-10 remove-border">
-                <div id="wrapper" class="image-canvas" #targetDiv>
-                  <!-- <img src="../../../assets/spinner.gif" [lazyLoad]="fileModel.path" /> -->
-                  <ngx-croppie class="image-canvas-img" #ngxCroppie
-                    [outputFormatOptions]="{ type: 'blob', size: 'viewport' }" [croppieOptions]="croppieOptions"
-                    [imageUrl]="fileModel.path" (result)="newImageResultFromCroppie($event)"></ngx-croppie>
+              <div class="col-md-10 remove-border" style="position:relative;">
+                <div id="wrapper" class="image-canvas" #targetDiv style="overflow:hidden;">
+                  <img src="../../../assets/spinner.gif" [lazyLoad]="fileModel.path" #imageCanvas />
+                  <div class="draggable" ngDraggable [bounds]="imageCanvas" [inBounds]="true" (movingOffset)="onDragMoving($event)">
+                    <div style="z-index: 3"></div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-1 remove-border">
@@ -57,6 +57,12 @@
                 <hr class="my-4">
                 <h6>Lock selection to equilateral squares </h6>
                 <input type="checkbox" class="form-control">
+                <br />
+                <h6>Current position of cut window</h6>
+                <div class="row">
+                  <div class="col-md-6"><h6>{{windowX}}</h6></div>
+                  <div class="col-md-6"><h6>{{windowY}}</h6></div>
+                </div>
               </div>
             </div>
           </div>
