--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,15 @@
 // Import core.ui styles
 @import "~@coreui/coreui/scss/coreui";
 
+* {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 // Color changes for a dark mode. Just change this boolean to enable / disable
 $dark-mode: true;
