--- a/src/app/screens/crop-image/crop-image.component.css
+++ b/src/app/screens/crop-image/crop-image.component.css
@@ -45,13 +45,8 @@
     overflow: hidden;
 }
 
-.image-canvas img {
-    max-width: 100%;
-    max-height: 100%;
-    position:absolute; /*it can be fixed too*/
-    left:0; right:0;
-    top:0; bottom:0;
-    margin:auto;
+angular-cropper {
+    max-height: 100% !important;
 }
 
 input[type='checkbox'].form-control {
@@ -67,15 +62,4 @@ input[type='checkbox'].form-control {
     z-index: 1;
     margin-left: -1px;
     margin-top: -1px;
-}
-
-.draggable {
-    width: 100px;
-    height: 100px;
-    z-index: 3;
-    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.4);
-}
-
-.ng-draggable {
-    cursor: move;
 }
