--- a/src/app/screens/crop-image/crop-image.component.css
+++ b/src/app/screens/crop-image/crop-image.component.css
@@ -45,13 +45,25 @@
     overflow: hidden;
 }
 
-angular-cropper {
-    max-height: 100% !important;
+.image-canvas img {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+
+.form-inline label {
+    text-align: center;
+    margin-left: 5px;
+    margin-top: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 1px;
 }
 
 input[type='checkbox'].form-control {
     font-size: 3px;
-    width: 20px;
+    width: 16px;
 }
 
 .foreground {
@@ -62,4 +74,21 @@ input[type='checkbox'].form-control {
     z-index: 1;
     margin-left: -1px;
     margin-top: -1px;
+}
+
+.preview {
+    overflow: hidden;
+    width: 100%; 
+    height: 100%;
+}
+
+.vertical-separator {
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    height: 100%;
+}
+
+.cell-padding {
+    width: 100%;
+    height: 100%;
+    margin: -5px;
 }
