--- a/src/app/screens/crop-image/crop-image.component.html
+++ b/src/app/screens/crop-image/crop-image.component.html
@@ -11,8 +11,7 @@
   <main class="main">
     <!-- Main div of the page -->
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a routerLink="/home" routerLinkActive="active">Home (Select root folder)</a></li>
-      <li class="breadcrumb-item"><a routerLink="/select-image" routerLinkActive="active">Select Image</a></li>
+      <li class="breadcrumb-item"><a routerLink="/select-media" routerLinkActive="active">Select Image</a></li>
       <li class="breadcrumb-item active">Crop Image</li>
     </ol>
 
